--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  height: 60px;
+  position: relative;
+  cursor: pointer;
+}
+
+.fund{
+  color: white;
+  text-shadow: 5px 1px 2px dimgrey;
 }
 
 @media (prefers-reduced-motion: no-preference) {
